# python-project-template

./: .commitlintrc.yml  .gitignore  .prep-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
src/sample/: cli.py
tests/sample/: test_smoke.py
